# assimp-sys

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs  index.html  search-index.js  travis-install-assimp.sh
assimp-sys-test/: Cargo.toml  build.rs
assimp_sys/: AIIMPORTERFLAG_EXPERIMENTAL.v.html  AIIMPORTERFLAG_LIMITED_SUPPORT.v.html  AIIMPORTERFLAG_SUPPORT_BINARY_FLAVOUR.v.html  AIIMPORTERFLAG_SUPPORT_COMPRESSED_FLAVOUR.v.html  AIIMPORTERFLAG_SUPPORT_TEXT_FLAVOUR.v.html  AIPRIMITIVETYPE_POINT.v.html  AIPROCESS_DEBONE.v.html  AIPROCESS_FIND_DEGENERATES.v.html  AIPROCESS_FIND_INSTANCES.v.html  AIPROCESS_FIND_INVALID_DATA.v.html  AIPROCESS_FIX_INFACING_NORMALS.v.html  AIPROCESS_FLIP_UVS.v.html  AIPROCESS_FLIP_WINDING_ORDER.v.html  AIPROCESS_MAKE_LEFT_HANDED.v.html  AIPROCESS_OPTIMIZE_MESHES.v.html  AIPROCESS_SORT_BY_PTYPE.v.html  AIPROCESS_TARGET_REALTIME_FAST.v.html  AIPROCESS_TARGET_REALTIME_QUALITY.v.html  AIPROCESS_TRANSFORM_UV_COORDS.v.html  AIPROCESS_TRIANGULATE.v.html  AI_MAX_BONE_WEIGHTS.v.html  AI_MAX_FACE_INDICES.v.html  AI_SCENE_FLAGS_ALLOW_SHARED.v.html  AI_SCENE_FLAGS_NON_VERBOSE_FORMAT.v.html  AI_SCENE_FLAGS_VALIDATED.v.html  AI_TRUE.v.html  ASSIMP_CFLAGS_DEBUG.v.html  ASSIMP_CFLAGS_NOBOOST.v.html  ASSIMP_CFLAGS_STLPORT.v.html  AiAnimBehaviour.t.html  AiAnimMesh.t.html  AiBlendMode.t.html  AiBool.t.html  AiColor3D.t.html  AiColor4D.t.html  AiCompileFlags.t.html  AiFileCloseProc.t.html  AiFileFlushProc.t.html  AiFileIO.t.html  AiFileOpenProc.t.html  (+250 more)
src/: anim.rs  camera.rs  cexport.rs  cfileio.rs  cimport.rs  config.rs  importerdesc.rs  lib.rs  (+9 more)
(+411 files in other folders)
